grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-grafana
  name: grafana-deployment
spec:
  selector:
    matchLabels:
      app: my-grafana
  template:
    metadata:
      labels:
        app: my-grafana
    spec:
      securityContext: #บังคับเป็น root
        fsGroup: 0         
        runAsUser: 0
      containers:
        - name: grafana-container
          image: grafana/grafana:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pv
      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-volume-claim
