grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service # ต้องตรงกับ label ใน Deployment
spec:
  selector:
    app: my-grafana # ต้องตรงกับ label ใน Deployment
  ports:
    - protocol: TCP
      port: 3000         # Port ของ Service
      targetPort: 3000   # Port ของ Pod ที่ต้องการส่งไปหา
  type: ClusterIP      # ใช้เรียกกันเองภายใน Cluster
